# buffered

./: Cargo.toml  README.md
.github/workflows/: macos-latest.yml  ubuntu-latest.yml  windows-latest.yml
src/: buffer.rs  bytes_size.rs  compare.rs  deserialize.rs  from_buffer.rs  generate.rs  lib.rs  serialize.rs  tampon.rs  to_buffer.rs  wipe.rs
src/test/: compare_test.rs  generate_test.rs  mod.rs  wipe_test.rs
tests/: bytes_size.rs  tampon_impl.rs  tests.rs
tests/data/: mod.rs
tests/implementation/: mod.rs
tests/macros/: buffer_test.rs  bytes_size_test.rs  de_serialize_test.rs  mod.rs  to_buffer_test.rs  to_from_buffer_test.rs
